--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "cosmos",
     "format": "biome format --write .",
+    "format:check": "biome format .",
     "build:site": "cosmos-export",
     "build": "tsup ./lib/index.ts --dts --format esm"
   },
