--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dist"
   ],
   "repository": "https://github.com/tscircuit/hypergraph",
-  "devDependencies": {
+  "devDependencies": {  
     "@biomejs/biome": "^2.3.11",
     "@tscircuit/math-utils": "^0.0.29",
     "@types/bun": "latest",
@@ -23,11 +23,11 @@
     "react-cosmos": "^7.1.0",
     "react-cosmos-plugin-vite": "^7.1.0",
     "transformation-matrix": "^3.1.0",
-    "tsup": "^8.5.1"
+    "tsup": "^8.5.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "peerDependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
     "typescript": "^5"
   },
   "dependencies": {
