--- a/.github/workflows/bun-formatcheck.yml
+++ b/.github/workflows/bun-formatcheck.yml
@@ -23,4 +23,4 @@ jobs:
         run: bun install
 
       - name: Run format check
-        run: bun run format:check
+        run: bun x biome format .
